# produceit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .rubocop.yml  CHANGELOG  CHANGES  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  TODO.md  config.hpp.in  permissions  produceit-rpmlintrc  produceit.conf  produceit.spec  produceit.spec.in
.github/workflows/: codeql-analysis.yml
cmake/: coverage.cmake  features.cmake  project.cmake
debian/: .gitignore  changelog  control  copyright  produceit-debutils.install  produceit.install  rules  watch
src/: CMakeLists.txt  args.cpp  args.hpp  buildit.1  buildit.cpp  compiler.hpp  dir.cpp  dir.hpp  fsys.cpp  fsys.hpp  keyfile.cpp  keyfile.hpp  lxcuser.1  lxcuser.cpp  mount.cpp  mount.hpp  output.cpp  output.hpp  proc.cpp  proc.hpp  shellit.1  shellit.cpp  strings.cpp  strings.hpp  temporary.hpp
tests/: CMakeLists.txt  test_keyfile.cpp  test_output.cpp  test_strings.cpp
utils/: deb-archive.1  deb-archive.rb  deb-release.1  deb-release.rb  deb-remove.1  deb-remove.rb  dsc-archive.rb  dsc-remove.rb  test-shellit.sh
